argocd/networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "argo.trinity.dev.dolabs.tech"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - "argo.trinity.dev.dolabs.tech"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  hosts:
    - "argo.trinity.dev.dolabs.tech"
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            port:
              number: 443
            host: argocd-server
